--- a/www/resultStaff.htm
+++ b/www/resultStaff.htm
@@ -13,6 +13,11 @@ session_start();
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" rel="stylesheet" type="text/css" href="css/home.css">
+
+    <style> body  {opacity:0;}</style>
+    <script>
+        window.onload = function() {setTimeout(function(){document.body.style.opacity="100";},500);};
+    </script>
     <title>Result</title>
 
     <style> 
