--- a/www/reportStaffs.htm
+++ b/www/reportStaffs.htm
@@ -83,7 +83,7 @@ session_start();
                 </div>
 
                 <div class="col-md-5 " id="showC" style=background-color:#ffffff;>
-                    <h4>Divide by years</h4>
+                    <h4>By years</h4>
                     <br>
                     <canvas class="col-md-4 " id="showGraphofCitations">
 
@@ -93,7 +93,7 @@ session_start();
                     <br>
                     <br>
                     <br>
-                    <h4>Divide by type</h4>
+                    <h4>By publication type</h4>
                     <br>
                     <canvas class="col-md-4 " id="showGraphofArticles">
                         
@@ -112,10 +112,10 @@ session_start();
                     </table> -->
 
                     <div id="showResult"></div>
-                    <div id="showResult1"></div>
+                    <!-- <div id="showResult1"></div>
                     <button class="btn btn-info" onclick='showData();' id='shData'>show</button>
                     <button class="btn btn-info" onclick='addData();' id='aData'>add</button>
-                    <button class="btn btn-info" onclick='deleteData();' id='dData'>delete</button>
+                    <button class="btn btn-info" onclick='deleteData();' id='dData'>delete</button> -->
                 </div>
 
             </div>
