--- a/www/resultStaff.htm
+++ b/www/resultStaff.htm
@@ -54,6 +54,9 @@ session_start();
             font-size: 13px;
             font-weight: bold;
         }
+        b.auth{
+            font-size: 13px;
+        }
         
     </style>
 
